# drf-superset

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt
backend/: asgi.py  settings.py  urls.py  wsgi.py
docs/: index.md
docs/ref/: installation.md  usage.md
docs/rfc/: configuration.md
drf_superset/: apps.py  authentication.py  backends.py  error_handler.py  models.py  permissions.py  schemas.py  security.py  serializers.py  urls.py  views.py
drf_superset/core/: exceptions.py  fernet.py  helpers.py  mailer.py
drf_superset/management/commands/: permission.py  role.py  user.py
drf_superset/templates/email/: forgot_password.html  login.html  password_changed.html  register.html
media/: models.py  serializers.py  urls.py  views.py
